# inflationstudymirror

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/: tasciyapi.yml
.github/workflows/: beymen.yml  chakra_scraper.yml  gurmar.yml  tasciyapi.yml  vakko_scraper.yml  watson_scraper.yml  watsons.yml  yapimaks.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: SUMMARY.md
Codes/HomeGoods/: scraper.py
Codes/Technology/: beymen_tech_2026-05-06.csv  beymen_tech_2026-05-07.csv  beymen_tech_2026-05-13.csv  beymen_tech_2026-05-14.csv  beymen_tech_2026-05-15.csv  beymen_tech_2026-05-16.csv  beymen_tech_2026-05-17.csv  beymen_tech_2026-05-18.csv  beymen_tech_2026-05-19.csv  scraper.py
Codes/sahibinden/: camoufox_scraper.py  scraper_checkpoint_kayseri.json  scraper_checkpoint_tokat.json
Datas/: fixerguy.py
Datas/HomeGoods/: chakra_all_categories_2026_05_02.csv  chakra_all_categories_2026_05_03.csv  chakra_all_categories_2026_05_04.csv  chakra_all_categories_2026_05_05.csv  chakra_all_categories_2026_05_06.csv  chakra_all_categories_2026_05_07.csv  chakra_all_categories_2026_05_08.csv  (+75 more)
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md  USER_GUIDE.md
inflation_dashboard/: __init__.py
scripts/: verify_falcon_api.py  verify_full_stack.py  verify_streamlit_api_frontend.py
(+1424 files in other folders)
