[project]
name = "inflationstudymirror"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "falcon",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "pandas>=2.0",
    "plotly",
    "requests>=2.32.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit",
    "waitress>=3.0.2",
    "xgboost>=3.3.0",
]
